{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 9,
  "lineage": "9c1608f1-a2ac-166a-cb2a-7e9f75cf5426",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mtc_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mtc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:internet-gateway/igw-0b75754ec63214925",
            "id": "igw-0b75754ec63214925",
            "owner_id": "214836720718",
            "tags": {
              "Name": "mtc_internet_gateway"
            },
            "tags_all": {
              "Name": "mtc_internet_gateway"
            },
            "vpc_id": "vpc-0b048672771015ac7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "mtc_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b75754ec63214925",
            "id": "r-rtb-0810efd09e083f72f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0810efd09e083f72f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.mtc_internet_gateway",
            "module.route_table.aws_route_table.mtc_route_table",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mtc_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:route-table/rtb-0810efd09e083f72f",
            "id": "rtb-0810efd09e083f72f",
            "owner_id": "214836720718",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mtc_route_table"
            },
            "tags_all": {
              "Name": "mtc_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b048672771015ac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f559348549b4c43",
            "route_table_id": "rtb-0810efd09e083f72f",
            "subnet_id": "subnet-0e49fe50e92748f90"
          },
          "dependencies": [
            "module.route_table.aws_route_table.mtc_route_table",
            "module.subnet.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mtc_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:security-group/sg-0328285286325bd14",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0328285286325bd14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_security_group",
            "name_prefix": "",
            "owner_id": "214836720718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mtc_security_group"
            },
            "tags_all": {
              "Name": "mtc_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b048672771015ac7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:subnet/subnet-0e49fe50e92748f90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e49fe50e92748f90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214836720718",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mtc_subnet"
            },
            "tags_all": {
              "Name": "mtc_subnet"
            },
            "vpc_id": "vpc-0b048672771015ac7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:214836720718:vpc/vpc-0b048672771015ac7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ae6c0a22f777f03c",
            "default_route_table_id": "rtb-06b0b0ddf94bee071",
            "default_security_group_id": "sg-0ce5dd8c02b2d5855",
            "dhcp_options_id": "dopt-00cbe263477d66473",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b048672771015ac7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b0b0ddf94bee071",
            "owner_id": "214836720718",
            "tags": {
              "Name": "mtc_vpc"
            },
            "tags_all": {
              "Name": "mtc_vpc"
            }
          }
        }
      ]
    }
  ]
}